Java 11 compliant